# Biz-Voyager

./: .gitignore  AGENTS.md  README.md  content-tree-test.txt
jobs_market_v2/: .env.example  README.md  pyproject.toml
jobs_market_v2/.ci_state/: workflow_state.json
jobs_market_v2/.ci_triggers/: preserve_master_promotion_202604122034.txt
jobs_market_v2/config/: company_seed_records.csv  company_seed_sources.yaml  github_actions_secrets.env.example  koraia_ai_company_batch_20260403.csv  korea_ai_startup100_slice_20260403.csv  manual_companies_seed.csv  manual_sources_seed.yaml  mock_source_payloads.yaml  mss_baby_unicorn_2023_batch_20260409.csv  mss_dips_1000_2023_batch_20260409.csv  mss_manual_source_boost_20260409.csv  mss_manual_source_boost_20260409_c.csv  mss_manual_source_boost_20260409_d.csv  mss_manual_source_boost_20260409_e.csv  mss_manual_source_boost_20260409_f.csv  mss_manual_source_boost_20260409_hdc.csv  mss_manual_source_boost_20260409_i.csv  published_google_sheet_id.txt  published_llm_backend.json  runtime_state_manifest.txt  seed_company_inputs.yaml  seoul_ai_hub_company_batch_20260403.csv
jobs_market_v2/docs/: AUTOMATION_STATUS.md  HANDOFF.md  PRODUCTION_DEPLOY.md  RELEASE_BLOCKERS.md  WORK24_POPULATION_DISCOVERY.md  WORK_UNITS.md
jobs_market_v2/notebooks/: 00_source_screening.ipynb  01_bootstrap_population.ipynb
jobs_market_v2/output_samples/: approved_sources.csv  candidate_sources.csv  first_snapshot_jobs.parquet  rejected_sources.csv
jobs_market_v2/scripts/: apply_company_batch_sources.py  bootstrap_automation_state_branch.sh  (+34 more)
(+58 files in other folders)
